manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: switchbot-middleware-ingress
  labels:
    name: switchbot-middleware-ingress
spec:
  rules:
  - host: switchbot-middleware.k8s.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: switchbot-middleware
            port: 
              number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: switchbot-middleware
spec:
  selector:
    app: switchbot-middleware
  ports:
  - port: 8080
    targetPort: 8080
